--- a/word_clustering.ipynb
+++ b/word_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -29,14 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#building_name = 'ghc'\n",
-    "building_name = 'pouya'\n",
+    "building_name = 'sdh'\n",
     "token_type = 'justseparate'\n",
     "with open('metadata/%s_sentence_dict_%s.json' % (building_name, token_type), 'r') as fp:\n",
     "    sentence_dict = json.load(fp)"
@@ -44,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "adder = lambda x,y:x+y\n",
@@ -60,10 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -71,7 +65,7 @@
        "<function scipy.sparse.construct.hstack>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,10 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_of_sensors = len(bow_array)\n",
@@ -99,39 +91,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold:  3.5\n"
+      "Threshold:  2.5\n"
      ]
     }
    ],
    "source": [
     "#Apply threshold to hierarchical tree to obtain individual clusters. Results stored in equip_map\n",
     "dists = list(set(z[:,2]))\n",
-    "thresh = (dists[3] + dists[4]) /2 \n",
+    "thresh = (dists[2] + dists[3]) /2 \n",
     "print(\"Threshold: \", thresh)\n",
     "b = hier.fcluster(z,thresh, criterion='distance')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "142\n"
+      "70\n"
      ]
     }
    ],
@@ -146,6 +134,15 @@
     "    json.dump(cluster_dict, fp, indent=4, sort_keys=True)\n",
     "print(len(cluster_dict))    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
