--- a/word_clustering.ipynb
+++ b/word_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -29,12 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#building_name = 'ghc'\n",
-    "building_name = 'sdh'\n",
+    "building_name = 'ebu3b'\n",
     "token_type = 'justseparate'\n",
     "with open('metadata/%s_sentence_dict_%s.json' % (building_name, token_type), 'r') as fp:\n",
     "    sentence_dict = json.load(fp)"
@@ -42,8 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "adder = lambda x,y:x+y\n",
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +69,7 @@
        "<function scipy.sparse.construct.hstack>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,8 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "num_of_sensors = len(bow_array)\n",
@@ -91,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
